<resources>
    <string name="app_name">山高流水</string>
    <string name="copyright">Copyright © %d.All Rights Reserved.</string>
    <string name="permission_hint">不同意获取权限就无法使用~</string>
    <string name="allow">授权</string>
    <string name="deny">拒绝</string>
    <!-- 发现界面 -->
    <string name="discovery">发现</string>
    <string name="me">我的</string>
    <string name="feed">动态</string>
    <string name="publish_feed">发动态</string>
    <string name="search">搜索</string>
    <string name="add">添加</string>
    <!-- 评论 -->
    <string name="hint_comment">请输入评论内容.</string>
    <string name="send">发送</string>
    <string name="comment_create_success">评论发布成功</string>
    <string name="reply_comment">\@%1$s: %2$s</string>
    <string name="reply_hint">回复%1$s: </string>
    <string name="reply">回复</string>
    <string name="copy_success">拷贝成功</string>
    <string name="setting">设置</string>
    <string name="dark_mode">夜间模式</string>
    <string name="my_customer_service">我的客服</string>
    <string name="about">关于我们</string>
    <string name="cache_while_list">边听边缓存</string>
    <string name="not_open">未开启</string>
    <string name="logout">退出登录</string>
    <string name="login_or_register">登录或注册</string>
    <string name="enter_phone">请输入您的手机号</string>
    <string name="error_enter_phone">请输入手机号</string>
    <string name="enter_password">密码(6~15位)</string>
    <string name="login">登录</string>
    <string name="login_error">登录失败</string>
    <string name="register">立即注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="error_password_format">密码格式错误</string>
    <string name="enter_nickname">昵称(2~10位)</string>
    <string name="error_enter_nickname">请输入昵称(2~10位)</string>
    <string name="enter_confirm_password">确认密码</string>
    <string name="register_and_login">注册并登陆</string>
    <string name="error_nickname_format">昵称格式不正确(2~10位)</string>
    <string name="error_phone_format">手机号格式不正确</string>
    <string name="error_email_format">邮箱格式不正确</string>
    <string name="error_confirm_password_format">确认密码格式不正确</string>
    <string name="error_confirm_password">两次密码不正确</string>
    <!-- 我的资料 -->
    <string name="edit">编辑</string>
    <string name="my_profile">我的资料</string>
    <string name="save">保存</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="area">地区</string>
    <string name="description">个人介绍</string>
    <string name="hint_description">请向大家介绍下自己吧</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="third_account">第三方账号</string>
    <string name="qq">QQ</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="weibo">微博</string>
    <string name="select_gender">请选择性别</string>
    <string name="success_bind">绑定成功</string>
    <string name="bind_error">绑定失败</string>
    <string name="confirm_unbind">你确定解绑吗？</string>
    <string name="success_unbind">解绑成功</string>
    <string name="error_upload_image">上传图片出错</string>
    <string name="delete">删除</string>
    <string name="publish">发布</string>
    <string name="hint_feed">请输入你想说的.</string>
    <string name="hint_count">0/140</string>
    <string name="error_content_length">内容不能超过140字符.</string>
    <string name="feed_count">%1$d/140</string>
    <string name="about_ta">关于TA</string>
    <string name="person_info">个人信息</string>
    <string name="nickname_value">昵称：%1$s</string>
    <string name="gender_value">性别：%1$s</string>
    <string name="birthday_value">生日：2002-4-11</string>
    <string name="area_value">地区：%1$s</string>
    <string name="area_value2">%1$s-%2$s-%3$s</string>
    <string name="more_info">更多信息</string>
    <string name="more">更多</string>
    <string name="description_value">个人描述：%1$s</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <!-- 设置 -->
    <string name="network">网络</string>
    <string name="play_mobile_network">使用移动网络播放</string>
    <string name="play_mobile_network_summary_on">已打开移动网络播放，请注意流量消耗，以免产生额外费用</string>
    <string name="play_mobile_network_summary_off">已关闭移动网络播放</string>
    <string name="play_mobile_network_alert">当前处于移动网络，是否自动播放</string>
    <string name="download_mobile_network">使用移动网络下载</string>
    <string name="play_mobile_network_summary">这是更多描述</string>
    <string name="user_agreement">
        <Data>
        <![CDATA[ 登录即表示你同意《用户协议》和《隐私政策》 ]]>
        </Data>
    </string>
    <string name="share">添加</string>
    <string name="user_detail">用户详情</string>
    <string name="vae">大家好我是Vae，这是我即将发表的首张独创专辑《自定义》里面的一首推荐曲目，词曲编曲都是我自己，希望这首歌曲能在这个寒冷的冬天带给大家一种~温暖的感觉~</string>
    <string name="detail_value">大家好我是Vae，这是我即将发表的收藏独创专辑《自定义》里面的一首推荐曲目，词曲编曲都是我自己，希望这首歌曲，能在这个寒冷的冬天，带给大家一种温暖的感觉~</string>
</resources>