<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_margin="@dimen/padding_outer"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--        安卓官方输入框-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nicknameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_nickname"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            >
            <EditText
                android:id="@+id/nickname"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            >
            <EditText
                android:id="@+id/phone"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_password"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/primary"
            android:layout_marginTop="@dimen/d20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_and_login"
            app:cornerRadius="@dimen/d27_5"
            android:height="@dimen/d55">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>